# Agent-Engineers

./: .agent_metrics.json  .coverage  .env.example  .gitignore  .linear_issues_template.json  .linear_project.json  .linear_project_state.json  .linear_setup_guide.md  .linear_setup_status.md  .pip-audit.toml  .project_analysis_report.json  AI-101_DELIVERY_SUMMARY.md  AI-105_IMPLEMENTATION_REPORT.md  AI-107_SUMMARY.txt  AI-111_FILES_CHANGED.txt  AI-112_TEST_REPORT.md  AI-123_IMPLEMENTATION_REPORT.md  AI-129_IMPLEMENTATION_REPORT.md  AI-195_IMPLEMENTATION_REPORT.md  AI-261-IMPLEMENTATION-REPORT.md  AI-261-SUMMARY.md  AI-278-IMPLEMENTATION-REPORT.md  AI-50-FINAL-REPORT.md  AI-68_IMPLEMENTATION_REPORT.md  AI-69-IMPLEMENTATION-SUMMARY.md  AI-72_FILES_CHANGED.txt  AI-72_IMPLEMENTATION_SUMMARY.md  AI-99_IMPLEMENTATION_REPORT.md  CLAUDE.md  Dockerfile  FINAL_SETUP_REPORT.md  FINAL_VERIFICATION.txt  LINEAR_SETUP_STATUS.md  MONITORING.md  PROJECT_COMPLETION_SUMMARY.md  README.MD  README.md  SESSION_20_COMPLETION_REPORT.txt  SETUP_SUMMARY.txt  TECHNICAL_DEBT.md  (+32 more)
agents/: __init__.py  definitions.py  designer_agent.py  designer_integration.py  model_routing.py  orchestrator.py  routing_metadata.py
analytics/: __init__.py  cost_optimizer.py  efficiency.py  exporter.py  model_performance.py  sprint_velocity.py  tier_gate.py
audit/: __init__.py  events.py  integration.py  models.py  routes.py
benchmarks/: alerts.py  (+4 more)
sdk/: __init__.py  agent_definition.py  base_bridge.py  cli.py  mock_orchestrator.py  pyproject.toml  registry.py
sdk/examples/: __init__.py  security_review_agent.py
(+680 files in other folders)
